--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 .middle{
     position: relative;
-    width: 1210px;
+    width: 1100px;
     left: 50%;
     transform: translateX(-50%);
 }
 /*头部区域开始*/
 .header{
     position: relative;
-    width: 1200px;
+    width: 1100px;
     height: 80px;
 }
 .header .logo{
@@ -21,7 +21,7 @@
     position: absolute;
     right: 0;
     top: 15px;
-    width: 950px;
+    width: 850px;
     height: 100px;
 }
 .header .explain a {
@@ -53,7 +53,7 @@
     z-index: 2;
 }
 #nav{
-    width: 1210px;
+    width: 1100px;
     z-index: 2;
 }
 #nav ul{
@@ -105,7 +105,7 @@
 
 /*商品展示区域开始*/
 #myDisplay{
-    width: 1210px;
+    width: 1100px;
     height: 495px;
     background-color: #eee;
 }
@@ -226,7 +226,7 @@
 }
 #myDisplay .right .buy{
     position: relative;
-    width: 710px;
+    width: 610px;
     height: 170px;
 }
 #myDisplay .right .buy .one{
@@ -319,7 +319,7 @@
 
 /*第二个导航条开始*/
 #twoNav{
-    width: 1210px;
+    width: 1100px;
     height: 57px;
     border-bottom: 3px solid #34383b;
 }
@@ -342,12 +342,12 @@
 /*第二个导航条结束*/
 /*个人简介和技能书区域开始*/
 #introduces{
-    width: 1210px;
+    width: 1100px;
     height: 658px;
     padding-top: 10px;
 }
 #introduces .left{
-    width: 594px;
+    width: 484px;
     height: 657px;
     background: #8c0000;
 }
@@ -358,19 +358,19 @@
 }
 #introduces .information{
     position: absolute;
-    left: 302px;
+    left: 202px;
     top: 45px;
 }
 #introduces .left ul{
     position: absolute;
     left: 63px;
     top: 201px;
-    width: 470px;
+    width: 360px;
     height: 300px;
 }
 #introduces .left ul li{
     position: relative;
-    width: 470px;
+    width: 360px;
     height: 59px;
     border-bottom: 1px solid #a9a9a9;
     font-size: 18px;
@@ -397,7 +397,7 @@
     width: 606px;
     height: 657px;
     top: 10px;
-    left: 604px;
+    left: 494px;
 }
 #introduces .right p{
     width: 606px;
@@ -501,13 +501,13 @@
 /*技能总结区域开始*/
 #skillsSummaryBack{
     width: 100%;
-    height: 564px;
+    height: 631px;
     background: #efefef;
 }
 #skillsSummary{
     position: relative;
-    width: 1210px;
-    height: 550px;
+    width: 1100px;
+    height: 610px;
     top: 11px;
 }
 #skillsSummary .up .left{
@@ -515,7 +515,7 @@
     left: 0;
     top: 0;
     width: 96px;
-    height: 543px;
+    height: 610px;
     background: #0099ff;
 }
 #skillsSummary .up .left p{
@@ -533,11 +533,11 @@
     position: absolute;
     right: 0;
     top: 0;
-    width: 1109px;
+    width: 999px;
     height: 550px;
 }
 #skillsSummary .up .right li{
-    width: 1104px ;
+    width: 994px ;
     height:59px;
     line-height: 59px;
     background: #fff;
@@ -628,25 +628,25 @@
 /*自我评价区域开始*/
 #evaluation{
     position: relative;
-    top: 20px;
     width: 100%;
     height: 300px;
     background: #1f1f1f;
 }
 #evaluation .middle{
-    width: 1230px;
-    height: 280px;
     position: relative;
+    width: 1120px;
+    height: 280px;
 }
 #evaluation .middle li {
-    width: 390px;
-    height: 200px;
-    color: #FFF;
     float: left;
+    width: 355px;
+    height: 200px;
     margin-top: 50px;
     margin-right: 18px;
+    color: #fff;
 }
 #evaluation .middle li h3 {
+    margin-left: 5px;
     font-size: 16px;
 }
 #evaluation .middle li div{
@@ -660,6 +660,9 @@
     cursor: pointer;
     text-align:justify;
     font-size: 14px;
+}
+#evaluation .middle li .center {
+    text-align: center;
 }
 #evaluation .middle li a:hover{
     color: #E58994;
