--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,15 @@
     background: #3c3c3c;
 }
 #nav ul li{
-    color: #FFF;
     float: left;
     padding: 0 10px;
     cursor:pointer;
     font-size: 18px;
+    color: #FFF;
+}
+#nav ul #contact {
+    float: right;
+    margin-right: 10px;
 }
 #nav ul li a{
     color: #FFF;
@@ -76,11 +80,12 @@
     background: #101010;
 }
 #nav #contactInformation{
+    position: absolute;
+    right: 0;
+    /* left: 60px; */
+    display: none;
     width: 300px;
     height: 150px;
-    position: absolute;
-    left: 60px;
-    display: none;
 }
 #nav #contactInformation a{
     display: block;
@@ -439,7 +444,7 @@
 /*工作经历区域开始*/
 #menu {
     position: relative;
-    margin-top: 50px;
+    margin-top: 20px;
     border-top: 2px solid #999;
     border-bottom: 1px solid #dddddd;
 }
@@ -715,7 +720,7 @@ a{
 .middle-clear-flag{
     position:relative;
     width: 1210px;
-    height: 60px;
+    height: 20px;
 }
 .title-flag{
     width: 1210px;
