--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 .middle{
     position: relative;
     width: 1100px;
-    left: 50%;
-    transform: translateX(-50%);
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
+    margin: 0 auto;
 }
 /*头部区域开始*/
 .header{
@@ -348,7 +349,7 @@
 /*个人简介和技能书区域开始*/
 #introduces{
     width: 1100px;
-    height: 658px;
+    height: 680px;
     padding-top: 10px;
 }
 #introduces .left{
@@ -444,7 +445,6 @@
 /*工作经历区域开始*/
 #menu {
     position: relative;
-    margin-top: 20px;
     border-top: 2px solid #999;
     border-bottom: 1px solid #dddddd;
 }
@@ -514,6 +514,7 @@
     width: 1100px;
     height: 610px;
     top: 11px;
+    margin: 0 auto;
 }
 #skillsSummary .up .left{
     position: absolute;
@@ -525,10 +526,10 @@
 }
 #skillsSummary .up .left p{
     position: absolute;
+    display: block;
     left: 30px;
     top: 50%;
     transform: translateY(-50%);
-    display: block;
     width: 30px;
     height: 180px;
     font-size: 30px;
@@ -547,7 +548,7 @@
     line-height: 59px;
     background: #fff;
     text-indent: 10px;
-    border-bottom: 1px solid #CCC;
+    /* border-bottom: 1px solid #CCC; */
     margin-bottom: 10px;
     transition: all 0.6s;
     cursor: pointer;
@@ -633,18 +634,20 @@
 /*自我评价区域开始*/
 #evaluation{
     position: relative;
+    margin: 0 auto;
     width: 100%;
     height: 300px;
     background: #1f1f1f;
 }
 #evaluation .middle{
     position: relative;
-    width: 1120px;
+    width: 1100px;
     height: 280px;
+    margin: 0 auto;
 }
 #evaluation .middle li {
     float: left;
-    width: 355px;
+    width: 347px;
     height: 200px;
     margin-top: 50px;
     margin-right: 18px;
