--- a/css/page.css
+++ b/css/page.css
@@ -6,7 +6,7 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
     width: 780px;
-    margin: 0 auto;
+    margin: 0 auto ;
     border: 1px solid #555;
 }
 .introduction {
@@ -26,6 +26,7 @@ th {
 }
 
 .photo {
+    width: 110px;
     border-left: 1px solid #aaa;
     line-height: 100%;
 }
@@ -33,11 +34,16 @@ th {
     width: 100px;   
 }
 
+.experience {
+    margin-bottom: 10px;
+}
+
 .experience tr th {
     width: 20px;
     padding: 20px 30px;
     border-right: 1px solid #ccc;
 }
+
 .experience td {
     padding-left: 5px;
 }
@@ -48,8 +54,15 @@ div {
     margin: 5px 0;
 
 }
-.study {
+.borderBottom {
     border-bottom: 1px solid #ccc;
+}
+
+span {
+    background-color: #ddd;
+    border-radius: 5px;
+    font-weight: 700;
+    color: rgb(243, 57, 57);
 }
 
 p {
